<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="de.httptandooripalace.restaurantorderprinter.HistoryActivity">

    <LinearLayout
        android:id="@+id/ll_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/id"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/waiter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/waiter"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/table"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/price"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_closed_bills"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_titles"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/printHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:layout_margin="12dp"
            android:clickable="true"
            android:onClick="print_history"
            app:fabSize="mini"
            app:srcCompat="@drawable/printer" />

    </LinearLayout>

    <!--  <LinearLayout
          android:layout_marginTop="30dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_alignParentBottom="true"
          android:layout_alignParentEnd="true">

          <android.support.design.widget.FloatingActionButton
              android:id="@+id/filtering"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="12dp"
              android:onClick="new_bill"
              app:fabSize="mini"
              app:srcCompat="@android:drawable/btn_plus" />

      </LinearLayout>-->


</RelativeLayout>
